--- a/Electronics/RadioManager/RadioManager.cmp
+++ b/Electronics/RadioManager/RadioManager.cmp
@@ -1,4 +1,4 @@
-Cmp-Mod V01 Created by CvPcb (2013-07-07 BZR 4022)-stable date = 9/21/2014 9:42:01 PM
+Cmp-Mod V01 Created by CvPcb (2013-07-07 BZR 4022)-stable date = 9/21/2014 11:03:02 PM
 
 BeginCmp
 TimeStamp = /53DFFD33/5410F4F7;
@@ -430,6 +430,76 @@ EndCmp
 BeginCmp
 TimeStamp = /5410EB07/5416104C;
 Reference = R15;
+ValeurCmp = R;
+IdModule  = RESC1608-N;
+EndCmp
+
+BeginCmp
+TimeStamp = /541FE86C;
+Reference = R16;
+ValeurCmp = R;
+IdModule  = RESC1608-N;
+EndCmp
+
+BeginCmp
+TimeStamp = /541FD7D2;
+Reference = R17;
+ValeurCmp = R;
+IdModule  = RESC1608-N;
+EndCmp
+
+BeginCmp
+TimeStamp = /542012F3;
+Reference = R18;
+ValeurCmp = R;
+IdModule  = RESC1608-N;
+EndCmp
+
+BeginCmp
+TimeStamp = /542012FB;
+Reference = R19;
+ValeurCmp = R;
+IdModule  = RESC1608-N;
+EndCmp
+
+BeginCmp
+TimeStamp = /54201366;
+Reference = R20;
+ValeurCmp = R;
+IdModule  = RESC1608-N;
+EndCmp
+
+BeginCmp
+TimeStamp = /5420136E;
+Reference = R21;
+ValeurCmp = R;
+IdModule  = RESC1608-N;
+EndCmp
+
+BeginCmp
+TimeStamp = /542015E0;
+Reference = R22;
+ValeurCmp = R;
+IdModule  = RESC1608-N;
+EndCmp
+
+BeginCmp
+TimeStamp = /542015D8;
+Reference = R23;
+ValeurCmp = R;
+IdModule  = RESC1608-N;
+EndCmp
+
+BeginCmp
+TimeStamp = /542015D0;
+Reference = R24;
+ValeurCmp = R;
+IdModule  = RESC1608-N;
+EndCmp
+
+BeginCmp
+TimeStamp = /54201565;
+Reference = R25;
 ValeurCmp = R;
 IdModule  = RESC1608-N;
 EndCmp
